Italicize <em> elements (fixes #63); add label to searchbox input (fixes #64); change global nav "Admission" link/name (fixes #66); increase visibility of "Work at URI" footer link (fixes #67)

--- a/src/sass/partials/_brandbar.scss
+++ b/src/sass/partials/_brandbar.scss
@@ -48,6 +48,11 @@
 
 }
 
+#gs-query-label {
+    position: absolute;
+    left: -9999px;
+}
+
 #gs-query {
     font-weight: 300;
     font-size: 1.5rem;
