--- a/src/sass/partials/_type.scss
+++ b/src/sass/partials/_type.scss
@@ -83,7 +83,8 @@ strong {
     font-weight: 600;
 }
 
-i {
+i,
+em {
     font-style: italic;
 }
 
